<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MY TIP CALCULATOR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="EnterTip">Please Enter your Pre-Tip Bill Amount here..</string>
    <string name="defaultAmt">0.00</string>
    <string name="Tip10">10%</string>
    <string name="Tip15">15%</string>
    <string name="Tip20">20%</string>
    <string name="tipAmtis">&quot;Tip Amount is $ &quot;</string>
    <string name="clear">Clear All</string>
    <string name="EnterTipPerc">"Enter other Tip% : "</string>
    <string name="currency">$</string>
    <string name="percentage">%</string>
    <string name="chooseTip">Choose your tip % Or enter your own..</string>

</resources>
